[project]
name = "beetexting-token-service"
version = "0.1.0"
description = "Internal token service that manages BEEtexting OAuth2 tokens with automatic background refresh. Exposes tokens via a FastAPI endpoint for sibling microservices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "respx>=0.22,<1",
    "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
